# Project-Omni-Genesis

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  omni-genesis-analysis.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
NamoNexus/: .env  config.json  main.py  nre_core.py  requirements.txt
NamoNexus/core/: fusion_brain.py  rag_memory_system.py
backend/: Dockerfile  analytics.py  auth.py  config.py  database.py  logger.py  main.py  models.py  nre_core.py
backend/core/: fusion_brain.py  pdpa.py  rag_memory_system.py
backend/services/: __init__.py  emotion_detector.py  golden_ratio.py  golden_ratio_emotion.py  namo_personality.py  thai_nlp.py
backend/services/dark_core/: __init__.py  arousal_detector.py  dark_dialogue_engine.py  emotion_parasite_engine.py
backend/tests/: test_api_security.py  test_fusion_brain.py  test_golden_ratio_emotion.py  test_harmonic.py  test_pdpa.py  test_services.py
docs/: architecture.md  implementation-plan.md
frontend/: App.tsx  INSTALL_GUIDE.md  README.md  index.html  metadata.json  package.json  types.ts  vite.config.ts
frontend/components/: ArchiveChat.tsx
frontend/services/: geminiService.ts
frontend/src/services/: api.ts
